reference-llvm/tests/should-fail/fail24.mu
// bad use of @handler

function @entry foo() {
    bar();
}

function @handler bar() {
    ;
}
